--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   riverpod_annotation: ^2.3.5
   freezed_annotation: 2.4.1
   go_router: ^14.2.7
+  shared_preferences: ^2.3.1
   flutter_svg: ^2.0.10+1
   rest_client_kit:
     path: ./packages/rest_client_kit
