--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   rest_client_kit:
     path: ./packages/rest_client_kit
 
+  # Add Google Maps platform interface
+  maplibre_gl: ^0.20.0
+
+  # Add Flutter Dotenv
+  flutter_dotenv: ^5.2.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -79,6 +85,7 @@ flutter:
     - assets/icons/nav_bar/
     - assets/icons/reactions/
     - assets/icons/create/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
